--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gotracking",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,16 +13,22 @@
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
     "expo": "~46.0.9",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "^18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.5",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^29.0.3",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "eslint": "^8.23.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -30,7 +36,7 @@
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.8",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.3"
   },
   "private": true
